[package]
name = "near_schemafy_lib"
version = "0.7.0" # VERSION_TAG
authors = ["Markus Westerlind <marwes91@gmail.com>", "MATILLAT Quentin <qmatillat@gmail.com>", "Near Inc <hello@nearprotocol.com>"]
edition = "2018"

description = "Generates serializeable Rust types from a json schema"
license = "MIT"

repository = "https://github.com/near/schemafy"
documentation = "https://docs.rs/schemafy-near"


[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
schemafy_core = { version = "0.7.0", path = "../schemafy_core", package = "near_schemafy_core" } # VERSION_TAG
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
syn = "1.0"
uriparse = "0.6"

Inflector = "0.11"

